--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:layout_editor_absoluteX="-1dp"
+    tools:layout_editor_absoluteY="0dp">
 
     <ImageView
         android:id="@+id/image_details_fragment"
@@ -20,27 +22,26 @@
 
     <TextView
         android:id="@+id/movie_name_details_fragment"
-        android:layout_width="232dp"
-        android:layout_height="20dp"
+        android:layout_width="365dp"
+        android:layout_height="21dp"
         android:background="@drawable/rectangle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.139"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_details_fragment"
         app:layout_constraintVertical_bias="0.035" />
 
     <TextView
         android:id="@+id/movie_average_details_fragment"
-        android:layout_width="318dp"
-        android:layout_height="391dp"
+        android:layout_width="356dp"
+        android:layout_height="365dp"
         android:background="@drawable/rectangle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.268"
+        app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/movie_name_details_fragment"
-        app:layout_constraintVertical_bias="0.098" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/movie_release_details_fragment"
@@ -49,22 +50,23 @@
         android:background="@drawable/rectangle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.222"
+        app:layout_constraintHorizontal_bias="0.245"
         app:layout_constraintStart_toEndOf="@+id/image_details_fragment"
         app:layout_constraintTop_toBottomOf="@+id/movie_popularity_details_fragment"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintVertical_bias="0.02" />
 
     <TextView
         android:id="@+id/movie_rate_details_fragment"
         android:layout_width="92dp"
         android:layout_height="25dp"
         android:background="@drawable/rectangle"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.63"
+        app:layout_constraintHorizontal_bias="0.636"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/movie_release_details_fragment"
-        app:layout_constraintVertical_bias="0.02" />
+        app:layout_constraintVertical_bias="0.025" />
 
     <TextView
         android:id="@+id/movie_original_language_details_fragment"
@@ -80,12 +82,12 @@
 
     <TextView
         android:id="@+id/movie_popularity_details_fragment"
-        android:layout_width="152dp"
+        android:layout_width="133dp"
         android:layout_height="25dp"
         android:background="@drawable/rectangle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.175"
+        app:layout_constraintHorizontal_bias="0.166"
         app:layout_constraintStart_toEndOf="@+id/image_details_fragment"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.086" />
