--- a/app/src/main/res/layout/fragment_lineal.xml
+++ b/app/src/main/res/layout/fragment_lineal.xml
@@ -4,18 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ui.lineal_fragment.LinealFragment">
+    tools:context=".presentation.ui.fragments.LinealFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_lineal_movie_list"
-
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/lineal_movie_item" />
+        tools:listitem="@layout/lineal_movie_item"/>
+
+    <Button
+        android:id="@+id/change_fragment_to_table_button"
+        android:layout_width="152dp"
+        android:layout_height="64dp"
+        android:text="@string/change_format"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.938"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.979" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
