--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,9 +6,9 @@
 
     <TextView
         android:id="@+id/text_view_profile"
-        android:layout_width="86dp"
-        android:layout_height="41dp"
-        android:textColor="#000000"
+        android:layout_width="194dp"
+        android:layout_height="83dp"
         android:layout_gravity="center"
- />
+        android:gravity="center"
+        android:textColor="#000000" />
 </FrameLayout>
