refactoring architecture.add DataBinding in fragment classes

--- a/app/src/main/res/layout/fragment_table.xml
+++ b/app/src/main/res/layout/fragment_table.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ui.fragments.TabelFragment">
+    tools:context=".presentation.ui.fragments.TableFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_table_film_list"
