--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.movierating.presentation.ui.fragments.TabelFragment"
+        android:name="com.example.movierating.presentation.ui.fragments.TableFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_tabду" />
 
