--- a/app/src/main/res/layout/activity_regestration.xml
+++ b/app/src/main/res/layout/activity_regestration.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="test@test.com"
-            android:hint="@string/eMail_hint"
+            android:hint="@string/user_name_hint"
             android:inputType="textCapWords" />
     </com.google.android.material.textfield.TextInputLayout>
 
